parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> COMMENT procedures principal procedures end
Rule 2     principal -> PRINCIPAL LPARENT instructions RPARENT SEMICOLON
Rule 3     principal -> empty
Rule 4     procedures -> PROCEDURE ID LPARENT instructions RPARENT SEMICOLON procedures
Rule 5     procedures -> empty
Rule 6     instructions -> instructions NEW ID LPARENT datatype COMMA value RPARENT SEMICOLON commentary
Rule 7     instructions -> instructions VALUES LPARENT ID COMMA value RPARENT SEMICOLON commentary
Rule 8     instructions -> instructions ALTER LPARENT ID COMMA operator COMMA value RPARENT SEMICOLON commentary
Rule 9     instructions -> instructions ALTERB LPARENT ID RPARENT SEMICOLON commentary
Rule 10    instructions -> instructions MOVR SEMICOLON commentary
Rule 11    instructions -> instructions MOVL SEMICOLON commentary
Rule 12    instructions -> instructions HAMMER LPARENT position RPARENT SEMICOLON commentary
Rule 13    instructions -> instructions STOP SEMICOLON commentary
Rule 14    instructions -> instructions REPEAT LPARENT repeat_instructions RPARENT SEMICOLON commentary
Rule 15    instructions -> instructions untilbody SEMICOLON commentary
Rule 16    instructions -> instructions whilebody SEMICOLON commentary
Rule 17    instructions -> instructions casebody SEMICOLON commentary
Rule 18    instructions -> instructions PRINT LPARENT startvalue RPARENT SEMICOLON commentary
Rule 19    instructions -> instructions istrue SEMICOLON commentary
Rule 20    instructions -> instructions CALL LPARENT ID RPARENT SEMICOLON commentary
Rule 21    instructions -> empty
Rule 22    commentary -> COMMENT
Rule 23    commentary -> empty
Rule 24    datatype -> NUMVAL
Rule 25    datatype -> BOOLVAL
Rule 26    value -> NUMBER
Rule 27    value -> TRUE
Rule 28    value -> FALSE
Rule 29    value -> ALTER LPARENT ID COMMA operator COMMA value RPARENT
Rule 30    operator -> ADD
Rule 31    operator -> SUB
Rule 32    operator -> MUL
Rule 33    operator -> DIV
Rule 34    comparator -> GT
Rule 35    comparator -> LT
Rule 36    comparator -> GET
Rule 37    comparator -> LET
Rule 38    comparator -> EQ
Rule 39    comparator -> DT
Rule 40    position -> NORTH
Rule 41    position -> SOUTH
Rule 42    position -> EAST
Rule 43    position -> WEST
Rule 44    repeat_instructions -> instructions BREAK
Rule 45    untilbody -> UNTIL LPARENT instructions RPARENT condition
Rule 46    whilebody -> WHILE condition LPARENT instructions RPARENT
Rule 47    casebody -> CASE WHEN LPARENT condition RPARENT THEN LPARENT instructions RPARENT case_else
Rule 48    case_else -> ELSE LPARENT instructions RPARENT
Rule 49    case_else -> empty
Rule 50    casebody -> CASE ID innercasebody
Rule 51    innercasebody -> WHEN NUMBER THEN LPARENT instructions RPARENT innercasebody
Rule 52    innercasebody -> WHEN TRUE THEN LPARENT instructions RPARENT innercasebody
Rule 53    innercasebody -> WHEN FALSE THEN LPARENT instructions RPARENT innercasebody
Rule 54    innercasebody -> empty
Rule 55    condition -> ID comparator ID
Rule 56    condition -> ID comparator NUMBER
Rule 57    condition -> NUMBER comparator ID
Rule 58    condition -> NUMBER comparator NUMBER
Rule 59    condition -> TRUE
Rule 60    condition -> FALSE
Rule 61    condition -> istrue
Rule 62    istrue -> VERT LPARENT ID RPARENT
Rule 63    startvalue -> STRING
Rule 64    startvalue -> ID
Rule 65    end -> empty
Rule 66    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 30
ALTER                : 8 29
ALTERB               : 9
BOOLVAL              : 25
BREAK                : 44
CALL                 : 20
CASE                 : 47 50
COMMA                : 6 7 8 8 29 29
COMMENT              : 1 22
DIV                  : 33
DT                   : 39
EAST                 : 42
ELSE                 : 48
EQ                   : 38
FALSE                : 28 53 60
GET                  : 36
GT                   : 34
HAMMER               : 12
ID                   : 4 6 7 8 9 20 29 50 55 55 56 57 62 64
LET                  : 37
LPARENT              : 2 4 6 7 8 9 12 14 18 20 29 45 46 47 47 48 51 52 53 62
LT                   : 35
MOVL                 : 11
MOVR                 : 10
MUL                  : 32
NEW                  : 6
NORTH                : 40
NUMBER               : 26 51 56 57 58 58
NUMVAL               : 24
PRINCIPAL            : 2
PRINT                : 18
PROCEDURE            : 4
REPEAT               : 14
RPARENT              : 2 4 6 7 8 9 12 14 18 20 29 45 46 47 47 48 51 52 53 62
SEMICOLON            : 2 4 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20
SOUTH                : 41
STOP                 : 13
STRING               : 63
SUB                  : 31
THEN                 : 47 51 52 53
TRUE                 : 27 52 59
UNTIL                : 45
VALUES               : 7
VERT                 : 62
WEST                 : 43
WHEN                 : 47 51 52 53
WHILE                : 46
error                : 

Nonterminals, with rules where they appear

case_else            : 47
casebody             : 17
commentary           : 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20
comparator           : 55 56 57 58
condition            : 45 46 47
datatype             : 6
empty                : 3 5 21 23 49 54 65
end                  : 1
innercasebody        : 50 51 52 53
instructions         : 2 4 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 44 45 46 47 48 51 52 53
istrue               : 19 61
operator             : 8 29
position             : 12
principal            : 1
procedures           : 1 1 4
program              : 0
repeat_instructions  : 14
startvalue           : 18
untilbody            : 15
value                : 6 7 8 29
whilebody            : 16

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . COMMENT procedures principal procedures end

    COMMENT         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> COMMENT . procedures principal procedures end
    (4) procedures -> . PROCEDURE ID LPARENT instructions RPARENT SEMICOLON procedures
    (5) procedures -> . empty
    (66) empty -> .

  ! shift/reduce conflict for PROCEDURE resolved as shift
    PROCEDURE       shift and go to state 4
    PRINCIPAL       reduce using rule 66 (empty -> .)
    $end            reduce using rule 66 (empty -> .)

  ! PROCEDURE       [ reduce using rule 66 (empty -> .) ]

    procedures                     shift and go to state 3
    empty                          shift and go to state 5

state 3

    (1) program -> COMMENT procedures . principal procedures end
    (2) principal -> . PRINCIPAL LPARENT instructions RPARENT SEMICOLON
    (3) principal -> . empty
    (66) empty -> .

    PRINCIPAL       shift and go to state 7
    PROCEDURE       reduce using rule 66 (empty -> .)
    $end            reduce using rule 66 (empty -> .)

    principal                      shift and go to state 6
    empty                          shift and go to state 8

state 4

    (4) procedures -> PROCEDURE . ID LPARENT instructions RPARENT SEMICOLON procedures

    ID              shift and go to state 9


state 5

    (5) procedures -> empty .

    PRINCIPAL       reduce using rule 5 (procedures -> empty .)
    PROCEDURE       reduce using rule 5 (procedures -> empty .)
    $end            reduce using rule 5 (procedures -> empty .)


state 6

    (1) program -> COMMENT procedures principal . procedures end
    (4) procedures -> . PROCEDURE ID LPARENT instructions RPARENT SEMICOLON procedures
    (5) procedures -> . empty
    (66) empty -> .

    PROCEDURE       shift and go to state 4
    $end            reduce using rule 66 (empty -> .)

    procedures                     shift and go to state 10
    empty                          shift and go to state 5

state 7

    (2) principal -> PRINCIPAL . LPARENT instructions RPARENT SEMICOLON

    LPARENT         shift and go to state 11


state 8

    (3) principal -> empty .

    PROCEDURE       reduce using rule 3 (principal -> empty .)
    $end            reduce using rule 3 (principal -> empty .)


state 9

    (4) procedures -> PROCEDURE ID . LPARENT instructions RPARENT SEMICOLON procedures

    LPARENT         shift and go to state 12


state 10

    (1) program -> COMMENT procedures principal procedures . end
    (65) end -> . empty
    (66) empty -> .

    $end            reduce using rule 66 (empty -> .)

    end                            shift and go to state 13
    empty                          shift and go to state 14

state 11

    (2) principal -> PRINCIPAL LPARENT . instructions RPARENT SEMICOLON
    (6) instructions -> . instructions NEW ID LPARENT datatype COMMA value RPARENT SEMICOLON commentary
    (7) instructions -> . instructions VALUES LPARENT ID COMMA value RPARENT SEMICOLON commentary
    (8) instructions -> . instructions ALTER LPARENT ID COMMA operator COMMA value RPARENT SEMICOLON commentary
    (9) instructions -> . instructions ALTERB LPARENT ID RPARENT SEMICOLON commentary
    (10) instructions -> . instructions MOVR SEMICOLON commentary
    (11) instructions -> . instructions MOVL SEMICOLON commentary
    (12) instructions -> . instructions HAMMER LPARENT position RPARENT SEMICOLON commentary
    (13) instructions -> . instructions STOP SEMICOLON commentary
    (14) instructions -> . instructions REPEAT LPARENT repeat_instructions RPARENT SEMICOLON commentary
    (15) instructions -> . instructions untilbody SEMICOLON commentary
    (16) instructions -> . instructions whilebody SEMICOLON commentary
    (17) instructions -> . instructions casebody SEMICOLON commentary
    (18) instructions -> . instructions PRINT LPARENT startvalue RPARENT SEMICOLON commentary
    (19) instructions -> . instructions istrue SEMICOLON commentary
    (20) instructions -> . instructions CALL LPARENT ID RPARENT SEMICOLON commentary
    (21) instructions -> . empty
    (66) empty -> .

    RPARENT         reduce using rule 66 (empty -> .)
    NEW             reduce using rule 66 (empty -> .)
    VALUES          reduce using rule 66 (empty -> .)
    ALTER           reduce using rule 66 (empty -> .)
    ALTERB          reduce using rule 66 (empty -> .)
    MOVR            reduce using rule 66 (empty -> .)
    MOVL            reduce using rule 66 (empty -> .)
    HAMMER          reduce using rule 66 (empty -> .)
    STOP            reduce using rule 66 (empty -> .)
    REPEAT          reduce using rule 66 (empty -> .)
    PRINT           reduce using rule 66 (empty -> .)
    CALL            reduce using rule 66 (empty -> .)
    UNTIL           reduce using rule 66 (empty -> .)
    WHILE           reduce using rule 66 (empty -> .)
    CASE            reduce using rule 66 (empty -> .)
    VERT            reduce using rule 66 (empty -> .)

    instructions                   shift and go to state 15
    empty                          shift and go to state 16

state 12

    (4) procedures -> PROCEDURE ID LPARENT . instructions RPARENT SEMICOLON procedures
    (6) instructions -> . instructions NEW ID LPARENT datatype COMMA value RPARENT SEMICOLON commentary
    (7) instructions -> . instructions VALUES LPARENT ID COMMA value RPARENT SEMICOLON commentary
    (8) instructions -> . instructions ALTER LPARENT ID COMMA operator COMMA value RPARENT SEMICOLON commentary
    (9) instructions -> . instructions ALTERB LPARENT ID RPARENT SEMICOLON commentary
    (10) instructions -> . instructions MOVR SEMICOLON commentary
    (11) instructions -> . instructions MOVL SEMICOLON commentary
    (12) instructions -> . instructions HAMMER LPARENT position RPARENT SEMICOLON commentary
    (13) instructions -> . instructions STOP SEMICOLON commentary
    (14) instructions -> . instructions REPEAT LPARENT repeat_instructions RPARENT SEMICOLON commentary
    (15) instructions -> . instructions untilbody SEMICOLON commentary
    (16) instructions -> . instructions whilebody SEMICOLON commentary
    (17) instructions -> . instructions casebody SEMICOLON commentary
    (18) instructions -> . instructions PRINT LPARENT startvalue RPARENT SEMICOLON commentary
    (19) instructions -> . instructions istrue SEMICOLON commentary
    (20) instructions -> . instructions CALL LPARENT ID RPARENT SEMICOLON commentary
    (21) instructions -> . empty
    (66) empty -> .

    RPARENT         reduce using rule 66 (empty -> .)
    NEW             reduce using rule 66 (empty -> .)
    VALUES          reduce using rule 66 (empty -> .)
    ALTER           reduce using rule 66 (empty -> .)
    ALTERB          reduce using rule 66 (empty -> .)
    MOVR            reduce using rule 66 (empty -> .)
    MOVL            reduce using rule 66 (empty -> .)
    HAMMER          reduce using rule 66 (empty -> .)
    STOP            reduce using rule 66 (empty -> .)
    REPEAT          reduce using rule 66 (empty -> .)
    PRINT           reduce using rule 66 (empty -> .)
    CALL            reduce using rule 66 (empty -> .)
    UNTIL           reduce using rule 66 (empty -> .)
    WHILE           reduce using rule 66 (empty -> .)
    CASE            reduce using rule 66 (empty -> .)
    VERT            reduce using rule 66 (empty -> .)

    instructions                   shift and go to state 17
    empty                          shift and go to state 16

state 13

    (1) program -> COMMENT procedures principal procedures end .

    $end            reduce using rule 1 (program -> COMMENT procedures principal procedures end .)


state 14

    (65) end -> empty .

    $end            reduce using rule 65 (end -> empty .)


state 15

    (2) principal -> PRINCIPAL LPARENT instructions . RPARENT SEMICOLON
    (6) instructions -> instructions . NEW ID LPARENT datatype COMMA value RPARENT SEMICOLON commentary
    (7) instructions -> instructions . VALUES LPARENT ID COMMA value RPARENT SEMICOLON commentary
    (8) instructions -> instructions . ALTER LPARENT ID COMMA operator COMMA value RPARENT SEMICOLON commentary
    (9) instructions -> instructions . ALTERB LPARENT ID RPARENT SEMICOLON commentary
    (10) instructions -> instructions . MOVR SEMICOLON commentary
    (11) instructions -> instructions . MOVL SEMICOLON commentary
    (12) instructions -> instructions . HAMMER LPARENT position RPARENT SEMICOLON commentary
    (13) instructions -> instructions . STOP SEMICOLON commentary
    (14) instructions -> instructions . REPEAT LPARENT repeat_instructions RPARENT SEMICOLON commentary
    (15) instructions -> instructions . untilbody SEMICOLON commentary
    (16) instructions -> instructions . whilebody SEMICOLON commentary
    (17) instructions -> instructions . casebody SEMICOLON commentary
    (18) instructions -> instructions . PRINT LPARENT startvalue RPARENT SEMICOLON commentary
    (19) instructions -> instructions . istrue SEMICOLON commentary
    (20) instructions -> instructions . CALL LPARENT ID RPARENT SEMICOLON commentary
    (45) untilbody -> . UNTIL LPARENT instructions RPARENT condition
    (46) whilebody -> . WHILE condition LPARENT instructions RPARENT
    (47) casebody -> . CASE WHEN LPARENT condition RPARENT THEN LPARENT instructions RPARENT case_else
    (50) casebody -> . CASE ID innercasebody
    (62) istrue -> . VERT LPARENT ID RPARENT

    RPARENT         shift and go to state 18
    NEW             shift and go to state 19
    VALUES          shift and go to state 20
    ALTER           shift and go to state 21
    ALTERB          shift and go to state 22
    MOVR            shift and go to state 23
    MOVL            shift and go to state 24
    HAMMER          shift and go to state 25
    STOP            shift and go to state 26
    REPEAT          shift and go to state 27
    PRINT           shift and go to state 31
    CALL            shift and go to state 33
    UNTIL           shift and go to state 34
    WHILE           shift and go to state 35
    CASE            shift and go to state 36
    VERT            shift and go to state 37

    untilbody                      shift and go to state 28
    whilebody                      shift and go to state 29
    casebody                       shift and go to state 30
    istrue                         shift and go to state 32

state 16

    (21) instructions -> empty .

    RPARENT         reduce using rule 21 (instructions -> empty .)
    NEW             reduce using rule 21 (instructions -> empty .)
    VALUES          reduce using rule 21 (instructions -> empty .)
    ALTER           reduce using rule 21 (instructions -> empty .)
    ALTERB          reduce using rule 21 (instructions -> empty .)
    MOVR            reduce using rule 21 (instructions -> empty .)
    MOVL            reduce using rule 21 (instructions -> empty .)
    HAMMER          reduce using rule 21 (instructions -> empty .)
    STOP            reduce using rule 21 (instructions -> empty .)
    REPEAT          reduce using rule 21 (instructions -> empty .)
    PRINT           reduce using rule 21 (instructions -> empty .)
    CALL            reduce using rule 21 (instructions -> empty .)
    UNTIL           reduce using rule 21 (instructions -> empty .)
    WHILE           reduce using rule 21 (instructions -> empty .)
    CASE            reduce using rule 21 (instructions -> empty .)
    VERT            reduce using rule 21 (instructions -> empty .)
    BREAK           reduce using rule 21 (instructions -> empty .)


state 17

    (4) procedures -> PROCEDURE ID LPARENT instructions . RPARENT SEMICOLON procedures
    (6) instructions -> instructions . NEW ID LPARENT datatype COMMA value RPARENT SEMICOLON commentary
    (7) instructions -> instructions . VALUES LPARENT ID COMMA value RPARENT SEMICOLON commentary
    (8) instructions -> instructions . ALTER LPARENT ID COMMA operator COMMA value RPARENT SEMICOLON commentary
    (9) instructions -> instructions . ALTERB LPARENT ID RPARENT SEMICOLON commentary
    (10) instructions -> instructions . MOVR SEMICOLON commentary
    (11) instructions -> instructions . MOVL SEMICOLON commentary
    (12) instructions -> instructions . HAMMER LPARENT position RPARENT SEMICOLON commentary
    (13) instructions -> instructions . STOP SEMICOLON commentary
    (14) instructions -> instructions . REPEAT LPARENT repeat_instructions RPARENT SEMICOLON commentary
    (15) instructions -> instructions . untilbody SEMICOLON commentary
    (16) instructions -> instructions . whilebody SEMICOLON commentary
    (17) instructions -> instructions . casebody SEMICOLON commentary
    (18) instructions -> instructions . PRINT LPARENT startvalue RPARENT SEMICOLON commentary
    (19) instructions -> instructions . istrue SEMICOLON commentary
    (20) instructions -> instructions . CALL LPARENT ID RPARENT SEMICOLON commentary
    (45) untilbody -> . UNTIL LPARENT instructions RPARENT condition
    (46) whilebody -> . WHILE condition LPARENT instructions RPARENT
    (47) casebody -> . CASE WHEN LPARENT condition RPARENT THEN LPARENT instructions RPARENT case_else
    (50) casebody -> . CASE ID innercasebody
    (62) istrue -> . VERT LPARENT ID RPARENT

    RPARENT         shift and go to state 38
    NEW             shift and go to state 19
    VALUES          shift and go to state 20
    ALTER           shift and go to state 21
    ALTERB          shift and go to state 22
    MOVR            shift and go to state 23
    MOVL            shift and go to state 24
    HAMMER          shift and go to state 25
    STOP            shift and go to state 26
    REPEAT          shift and go to state 27
    PRINT           shift and go to state 31
    CALL            shift and go to state 33
    UNTIL           shift and go to state 34
    WHILE           shift and go to state 35
    CASE            shift and go to state 36
    VERT            shift and go to state 37

    untilbody                      shift and go to state 28
    whilebody                      shift and go to state 29
    casebody                       shift and go to state 30
    istrue                         shift and go to state 32

state 18

    (2) principal -> PRINCIPAL LPARENT instructions RPARENT . SEMICOLON

    SEMICOLON       shift and go to state 39


state 19

    (6) instructions -> instructions NEW . ID LPARENT datatype COMMA value RPARENT SEMICOLON commentary

    ID              shift and go to state 40


state 20

    (7) instructions -> instructions VALUES . LPARENT ID COMMA value RPARENT SEMICOLON commentary

    LPARENT         shift and go to state 41


state 21

    (8) instructions -> instructions ALTER . LPARENT ID COMMA operator COMMA value RPARENT SEMICOLON commentary

    LPARENT         shift and go to state 42


state 22

    (9) instructions -> instructions ALTERB . LPARENT ID RPARENT SEMICOLON commentary

    LPARENT         shift and go to state 43


state 23

    (10) instructions -> instructions MOVR . SEMICOLON commentary

    SEMICOLON       shift and go to state 44


state 24

    (11) instructions -> instructions MOVL . SEMICOLON commentary

    SEMICOLON       shift and go to state 45


state 25

    (12) instructions -> instructions HAMMER . LPARENT position RPARENT SEMICOLON commentary

    LPARENT         shift and go to state 46


state 26

    (13) instructions -> instructions STOP . SEMICOLON commentary

    SEMICOLON       shift and go to state 47


state 27

    (14) instructions -> instructions REPEAT . LPARENT repeat_instructions RPARENT SEMICOLON commentary

    LPARENT         shift and go to state 48


state 28

    (15) instructions -> instructions untilbody . SEMICOLON commentary

    SEMICOLON       shift and go to state 49


state 29

    (16) instructions -> instructions whilebody . SEMICOLON commentary

    SEMICOLON       shift and go to state 50


state 30

    (17) instructions -> instructions casebody . SEMICOLON commentary

    SEMICOLON       shift and go to state 51


state 31

    (18) instructions -> instructions PRINT . LPARENT startvalue RPARENT SEMICOLON commentary

    LPARENT         shift and go to state 52


state 32

    (19) instructions -> instructions istrue . SEMICOLON commentary

    SEMICOLON       shift and go to state 53


state 33

    (20) instructions -> instructions CALL . LPARENT ID RPARENT SEMICOLON commentary

    LPARENT         shift and go to state 54


state 34

    (45) untilbody -> UNTIL . LPARENT instructions RPARENT condition

    LPARENT         shift and go to state 55


state 35

    (46) whilebody -> WHILE . condition LPARENT instructions RPARENT
    (55) condition -> . ID comparator ID
    (56) condition -> . ID comparator NUMBER
    (57) condition -> . NUMBER comparator ID
    (58) condition -> . NUMBER comparator NUMBER
    (59) condition -> . TRUE
    (60) condition -> . FALSE
    (61) condition -> . istrue
    (62) istrue -> . VERT LPARENT ID RPARENT

    ID              shift and go to state 57
    NUMBER          shift and go to state 58
    TRUE            shift and go to state 59
    FALSE           shift and go to state 60
    VERT            shift and go to state 37

    condition                      shift and go to state 56
    istrue                         shift and go to state 61

state 36

    (47) casebody -> CASE . WHEN LPARENT condition RPARENT THEN LPARENT instructions RPARENT case_else
    (50) casebody -> CASE . ID innercasebody

    WHEN            shift and go to state 62
    ID              shift and go to state 63


state 37

    (62) istrue -> VERT . LPARENT ID RPARENT

    LPARENT         shift and go to state 64


state 38

    (4) procedures -> PROCEDURE ID LPARENT instructions RPARENT . SEMICOLON procedures

    SEMICOLON       shift and go to state 65


state 39

    (2) principal -> PRINCIPAL LPARENT instructions RPARENT SEMICOLON .

    PROCEDURE       reduce using rule 2 (principal -> PRINCIPAL LPARENT instructions RPARENT SEMICOLON .)
    $end            reduce using rule 2 (principal -> PRINCIPAL LPARENT instructions RPARENT SEMICOLON .)


state 40

    (6) instructions -> instructions NEW ID . LPARENT datatype COMMA value RPARENT SEMICOLON commentary

    LPARENT         shift and go to state 66


state 41

    (7) instructions -> instructions VALUES LPARENT . ID COMMA value RPARENT SEMICOLON commentary

    ID              shift and go to state 67


state 42
